--- a/loading4.html
+++ b/loading4.html
@@ -22,7 +22,7 @@
 			margin: 50px;
 			float: button;
 			height: 30px;
-			width: 110px;
+			width: 150px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -83,7 +83,7 @@
         width: 0;
       }
       to{
-        width: 13em;
+        width: 14em;
       }
     }
 	</style>
@@ -95,6 +95,6 @@
 		<span></span>
 		<span></span>
 	</div>
-	<div class="container"><p class="line typing-animation">Loading...</p></div>
+	<div class="container"><p class="line typing-animation">Carregando...</p></div>
 </body>
 </html>
