--- a/letrasAnimation.html
+++ b/letrasAnimation.html
@@ -49,7 +49,7 @@
     
   </head>
 <body>
-  <p class="line typing-animation">ola, eu sou a juliana</p>
+  <p class="line typing-animation">ola, eu sou a joana</p>
 </body>
 
 </html>
