--- a/loading-5.html
+++ b/loading-5.html
@@ -3,8 +3,38 @@
 <head>
 	<meta charset="utf-8">
 	<title>moto</title>
-</head>
+	<style>
+		body{
+			background-color: #181818;
+			display: flex;
+			margin: 100px;
+			position: relative;
+		}
+		.container{
+			display: flex;
+			padding: 20px;
+			width: 100px;
+			height: 100px;
+			border-bottom: 100px;
+			border-bottom-color:red;
+			border-bottom:solid;
+			animation: motos 5s ease-in-out 1s normal infinite;
+		}
+		
+		@keyframes motos {
+			0%{
+				transform: rotate(10deg, 10deg);
+			}
+			
+			100%{
+				transform: translateX(calc(100vw - 100px));
+			}
+		}
+	</style>
+	</head>
 <body>
-oi
+	<div class="container"> 
+	<img class="moto" src="images.jpeg">
+</div>
 </body>
 </html>
