--- a/loading5.html
+++ b/loading5.html
@@ -36,6 +36,6 @@
 
     </head>
     <body>
- <div class="box"> <p> usou-se as propriedades do transition e do transforme.</p></div>
+ <div class="box"> <p> usou-se as propriedades do transition.</p></div>
     </body>
 </html>
