--- a/loading-5.html
+++ b/loading-5.html
@@ -5,7 +5,7 @@
 	<title>moto</title>
 	<style>
 		body{
-			background-color: #181818;
+			background-color: #352a2a;
 			display: flex;
 			margin: 100px;
 			position: relative;
