--- a/texte.html
+++ b/texte.html
@@ -29,51 +29,33 @@
 			width: 25px;
 		}
 		label:hover{
-			color: #32CD32;
+			color: #181818;
 		}
 		input[type="radio"] {
 		display: none; 
 		}
-		input[type="radio"] {
-			&:checked {
-				& + label {
-					color: #32CD32; 
-				}
-			}
-		}
-		.selecione-elemento{
-			background:  blue;
+		input[type ="radio"]:checked + label{
+				color: #32CD32; 
+		}  
+		.selecione-elemento {
+			background:  #32CD32;
+			border-radius: 2px;
 			width: 55px;
-			height: 10px;
+			height: 5px;
 			position: absolute;
 			left: 15px;
-			top: 38px;
-			transition: 0.25s easy-out;
+			top: 44px;
+			transition: 0.25s easy-in-out;
 		}
-
-		input[id="radio1"]{
-			&:checked{
-				& ~ .selecione-elemento{
+		input[id="radio1"]:checked ~ .selecione-elemento{
 					transform:translateX(100%);
 				}
-			}
-		}
-
-		input[id="radio2"]{
-			&:checked{
-				& ~ .selecione-elemento{
+		input[id="radio2"]:checked ~ .selecione-elemento{
 					transform:translateX(200%);
 				}
-			}
-		}
-
-		input[id="radio3"]{
-			&:checked{
-				& ~ .selecione-elemento{
+		input[id="radio3"]:checked ~ .selecione-elemento{
 					transform:translateX(300%);
 				}
-			}
-		}
 	</style>
   <script src="https://unpkg.com/feather-icons"></script>
   <body>
