--- a/texte.html
+++ b/texte.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <style type="text/css">
 		body{
- 			background: #181818;
+			background-color: #181818;
+ 			background: linear-gradient(-45deg, #181818, #23a6d5, #23d5ab) no-repeat;
  			display: flex;
  			width: 100%;
  			height: 100vh;
