--- a/login_pai.html
+++ b/login_pai.html
@@ -3,35 +3,39 @@
 <head>
 	<title>login pai</title>
 	<style type="text/css">
-		button{
-			background: none;
-			border: 0;
+		.butao{
+			width: 200px;
+			height: 100px;
+			color: #181818;
+			border: 3px solid #42fbf2;
+			border-radius: 4px;
+			font-size: 2rem;
 			position: relative;
-			transition: all 500ms ease-in-out;
-			margin: 10px;
-
+			z-index: 1;
+			transition: 0.3s;
+		}
+		.butao:hover{
+			cursor: pointer;
+			transition: 0.5s;
+			position: absolute;
+			top: 0;
+			left: 50%;
+			right: 50%;
+			bottom: 0;
+			content: "";
+			background-color: #42fbf2;
+			color: bisque;
+		}
+		.butao:hover:before{
+			transition: 0.5s;
+			left: 0;
+			right: 0;
+			opacity: 1;
+			z-index: -1;
 		}
 		
- 		button:after {
- 			content: '';
- 			transition: inherit;
- 			width: 35px;
- 			height: 35px;
- 			border-radius: 50%;
- 			background: red;
- 			position: absolute;
- 			top: -50%;
- 			left: -10%;
- 			opacity: 0.3;
- 			z-index: -1;
-
- 		}
- 		button:hover:after {
- 			width: calc(100% + 20px);
- 			border-radius: 20px;
- 			opacity: 0.6;
-
- 		}
+ 		
+ 		
  		body{
  			height: 100vh;
  			display: flex;
@@ -62,7 +66,7 @@
  			border: 0;
  			margin-bottom: 2px;
  			color:#363636;
- 			
+		 }
 	</style>
 </head>
 <body>
@@ -70,18 +74,15 @@
 		
 		<input type="name" name="nome" value="" placeholder="Nome de usuário">
 		
-
 		<input type="password" name="Senha" value="" placeholder="Senha">
 
-		
-		 
 		<label for="proprietario">    Proprietário
 			<input type="radio" id="proprietario" name="pessoa">
 		</label>
 		<label for="Gerente"> Gerente
 			<input type="radio" id="Gerente" name="pessoa">
 		</label>
-<button>Login</button>
+ <button type="button" class="butao">Login</button>
  </div>
 </body>
-</html>
+</html> 
