--- a/oi.html
+++ b/oi.html
@@ -8,13 +8,18 @@
       padding: 0;
       box-sizing: border-box;
     }
+
     body{
+      background-color: #2874cd;
+ 			background: linear-gradient(-45deg, #8B1A1A, #CD2626, #EE2C2C, #CD3700) no-repeat;
+
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #181818;
       height: 100vh;
-    }
+    animation: degrade 10s ease infinite;
+		}
+	
     .line{
       border-right: 2px solid rgba(255, 255, 255, 0.75);
       color: rgba(255, 255, 255, 0.75);
