--- a/texte.html
+++ b/texte.html
@@ -6,11 +6,24 @@
 		body{
 			background-color: #181818;
  			background: linear-gradient(-45deg, #181818, #23a6d5, #23d5ab) no-repeat;
- 			display: flex;
+ 			background-size: 300% 300%;
+			 display: flex;
  			width: 100%;
  			height: 100vh;
  			justify-content: center;
  			align-items: center;
+			 animation: degrade 10s ease infinite;
+		}
+		@keyframes degrade{
+			0%{
+				background-position: 0 50px;
+			}
+			50%{
+				background-position: 100% 50px;
+			}
+			100%{
+				background-position: 0 50px;
+			}
 		}
 		.container{
 			background: white;
