--- a/mudanca.html
+++ b/mudanca.html
@@ -122,7 +122,7 @@
               
            }
            .img3:hover{
-           transform: translateY(70px);
+           transform: translateY(-70px);
            transition-duration:2s;
            transition-delay: 0s;
            }
@@ -131,7 +131,7 @@
     </head>
     <body>
         <img class="img4" src="arma.png">
-        <img class="img3" src="caixa.jpg">
+        <img class="img3" src="prato.png">
         <div class="container"> 
         <div class="titulo">
             <hi>Vincezo Cassano</hi>
