--- a/mudanca.html
+++ b/mudanca.html
@@ -115,11 +115,12 @@
                
            }
            .img4{
+               border-radius: 8px;
                height: 70px;
                width: 70px;
                position: fixed;
                margin: 100px 40px;
-              
+              background-color: hsl(219, 79%, 66%, 0.2);
            }
            .img3:hover{
            transform: translateY(-70px);
@@ -130,8 +131,8 @@
        </style>       
     </head>
     <body>
-        <img class="img4" src="arma.png">
-        <img class="img3" src="prato.png">
+        <img class="img4" src="faca.png">
+        <img class="img3" src="panela.png">
         <div class="container"> 
         <div class="titulo">
             <hi>Vincezo Cassano</hi>
