--- a/Foto.html
+++ b/Foto.html
@@ -111,6 +111,17 @@ body {
 <a href="loading1.html">
 <input type="submit" value="Enviar">
 </a>
+
+
+	<div class="image">
+	  <div class="editar-content">
+	 
+	  </div>
+	  <div id="new">
+
+	  </div>
+	
+	</div>
 <script>var btnClose = document.querySelector('.close-preview-js');
     var output = document.getElementById("new");
     var loaderFile = function(event){
