--- a/Foto.html
+++ b/Foto.html
@@ -127,7 +127,7 @@ body {
 
 
 <script>var btnClose = document.querySelector('.close-preview-js');
-    var output = document.getElementById("new naw");
+    var output = document.getElementById("new", "naw");
     var loaderFile = function(event){
     var reader = new FileReader();
       reader.onload = function() {
