--- a/Foto.html
+++ b/Foto.html
@@ -128,7 +128,7 @@ body {
 
 
 
-
+uuui
 <script>var btnClose = document.querySelector('.close-preview-js');
     var output = document.getElementById("new");
 var output2 = document.getElementById("naw");
